<resources>
    <string name="app_name">EcoScan</string>
    <string name="app_logo">EcoScan</string>
    <string name="continuar_sin_cuenta"><u>Continuar sin acceder a una cuenta</u></string>
    <string name="btnIniciarSesion">INICIAR SESIÓN</string>
    <string name="btnCrearCuenta">CREAR CUENTA</string>
    <string name="nombre">NOMBRE COMPLETO</string>
    <string name="email">CORREO ELECTRÓNICO</string>
    <string name="clave">CONTRASEÑA</string>
    <string name="hintnombre">Nombre completo</string>
    <string name="hintemail">Correo electrónico</string>
    <string name="hintclave">Contraseña</string>
    <string name="hintuser">Usuario</string>
    <string name="user">USUARIO</string>
    <string name="crearcuenta">CREA UNA CUENTA</string>
    <string name="recuperarClave">RECUPERAR CONTRASEÑA</string>
    <string name="Anonimo">Si quieres guardar tus resultados en el historial</string>
    <string name="home">Inicio</string>
    <string name="scan">Escanear</string>
    <string name="profile">Perfil</string>
    <string name="ttlh">HISTORIAL</string>
    <string name="send">Enviar</string>
    <string name="escaner">Enfoca el objeto y presiona el botón de escanear</string>
    <string name="Historial">Consulta tu historial</string>
    <string name="Ubicación">Conoce puntos de reciclaje en Bogotá</string>
    <string name="Información">Aprende a reciclar según tu edad</string>
    <string name="Info">Recibe consejos dependiendo de tu grupo etario</string>
    <string name="perfilanonimo">¡Bienvenido! Si deseas acceder a todas las funcionalidades, puedes iniciar sesión o crear una cuenta</string>
    <string name="recclave">Si olvidaste tu contraseña, ingresa el correo electrónico con el que te registraste para iniciar el proceso de recuperación. Enviaremos todos los detalles a tu correo.</string>
    <string name="nocuenta">¿No tienes cuenta? Puedes</string>
    <string name="continuar">continuar sin iniciar sesión</string>
    <string name="crearc">crear una cuenta</string>
    <string name="forpass">¿Olvidaste tu contraseña?</string>
    <string name="inises">INICIA SESIÓN</string>
    <string name="puntosrec">Puntos de reciclaje</string>
    <string name="ciudades">*Aplica solo para Bogotá y Medellín</string>
    <string name="dropdown">Selecciona una ciudad</string>
    <string name="adolescente">Adolescentes (13 - 18 años)</string>
    <string name="menores">Niños (0 - 12 años)</string>
    <string name="adultos">Adultos (18+ años)</string>
    <string-array name="cities_array">
        <item>Bogotá</item>
        <item>Medellín</item>
        <!-- item>Barranquilla</item> -->
    </string-array>
    <string name="backbtn">Volver</string>
    <string name="info_message">En el mapa se encuentran las ubicaciones de Ecobot, donde se pueden depositar envases plásticos, latas, botellas llenas y Tetra Paks. Estas máquinas están diseñadas para facilitar el reciclaje y promover prácticas sostenibles.</string>
    <string name="ok_button">OK</string>
    <string name="cerrarsesion">CERRAR SESIÓN</string>
    <string name="productos">Mis productos escaneados</string>
    <string name="titulo_productos">Productos escaneados</string>
    <string name="scan_dialog">Recuerda que los envases deben estar limpios antes de botarlos en los contenedores de reciclaje.</string>
    <string name="resultado">Resultado</string>
    <string name="clasificacion">Clasificación</string>
    <string name="Divertido">Reciclar es super fácil y divertido.Separar tus residuos puede ayudar al planeta.Aqui te dejamos algunos consejos</string>
    <string name="Ayudar_Casa">¿Cómo puedes ayudar en casa? </string>
    <string name="Consejos_Padres">Pide a tus padres que te ayuden a separar el reciclaje en los contenedores dependiendo de su color</string>
    <string name="Organicos">Residuos Organicos(verde):Aqui van los restos de comida y desechos de plantas o da la cocina.Por ejemplo ,cáscaras de frutas,verduras o alimentos crudos.</string>
    <string name="Verde">Aqui van los restos de comida y desechos de plantas o da la cocina.Por ejemplo ,cáscaras de frutas,verduras o alimentos crudos.</string>
    <string name="Reciclables">Residuos Reciclables(blanco):Aqui van los residuos que son reciclables, como los materiales que son reutilizados en nuevos productos.Como plástico,vidrio,papel y cartón.</string>
    <string name="Blanco">Aqui van los residuos que son reciclables, como los materiales que son reutilizados en nuevos productos.Como plástico,vidrio,papel y cartón.</string>
    <string name="No_Reciclables">Residuos no reciclables(negro):Aqui van los residuos que no tienen reutilización.Por ejemplo pañales, toallas higiénicas,papel usado,residuos contaminados con aceite o grasa, colillas de cigarrillo.</string>
    <string name="Negro">Aqui van los residuos que no son reciclables y que no tienen reutilización.Por ejemplo pañales, toallas higiénicas,papel usado,residuos contaminados con aceite o grasa, colillas de cigarrillo ,papel higienico usado </string>

</resources>