<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:passwordToggleEnabled="true"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:shapeAppearanceOverlay="@style/circular"
        android:padding="10dp"
        app:strokeWidth="8dp"
        app:strokeColor="@color/green"
        android:background="@color/white"
        app:srcCompat="@drawable/profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/flecha_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/nombre"
        android:textColor="#689F38"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView" />

    <EditText
        android:id="@+id/fullnameInput"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/hintnombre"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLabel" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/user"
        android:textColor="#689F38"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameInput" />

    <EditText
        android:id="@+id/usernameInput"
        android:inputType="text"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/hintuser"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/email"
        android:textColor="#689F38"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <EditText
        android:id="@+id/emailInput"
        android:importantForAutofill="no"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/clave"
        android:textColor="#689F38"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/hintclave"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#70AB55"
        android:text="@string/btnCrearCuenta"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/ImageView"
        app:layout_constraintEnd_toEndOf="@+id/ImageView"
        app:srcCompat="@drawable/ic_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>
