<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/frameRecuperarCuenta"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/flecha_atras"
        app:layout_constraintBottom_toTopOf="@+id/txtRecuperarCuenta"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtRecuperarCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperarClave"
        android:fontFamily="@font/inter_bold"
        android:textSize="25sp"
        android:padding="25dp"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="@+id/frameRecuperarCuenta"
        app:layout_constraintBaseline_toBottomOf="parent" />

    <TextView
        android:id="@+id/recclave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recclave"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintTop_toBottomOf="@+id/txtRecuperarCuenta"
        android:textAlignment="center"
        android:padding="20dp"
        android:lineSpacingExtra="10dp"/>


    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:fontFamily="@font/inter_medium"
        android:hint="@string/hintemail"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recclave" />

    <Button
        android:id="@+id/send"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/inter_bold"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

</androidx.constraintlayout.widget.ConstraintLayout>