<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/backbtn"
        android:backgroundTint="@color/white"
        android:src="@drawable/flecha_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_nino"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/menor"
        android:drawablePadding="16dp"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/menores"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_adolescente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_adolescente"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/adolescente"
        android:drawablePadding="16dp"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/adolescente"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_nino"
        app:layout_constraintBottom_toTopOf="@+id/btn_adulto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_adulto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/adulto"
        android:drawablePadding="16dp"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/adultos"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_adolescente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>